--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -21,7 +21,7 @@ body {
 	text-align: left;
   	margin: 0;
   	padding: 0;
-  	background: url("/img/landing-bg-small.jpeg") top center repeat-x;
+  	background: url("/assets/images.webp") top center repeat-x;
 }
 .container {
 	max-width: 720px;
